src/objects/DRDW_Bdg_LI_Data_load__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Accrual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Element_Description__c</fullName>
        <label>Cost Element Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Element_Grouping__c</fullName>
        <label>Cost Element Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Element__c</fullName>
        <label>Cost Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRDW_Budget_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Budget Line Item</label>
        <referenceTo>DRDW_Budget_Line_Item__c</referenceTo>
        <relationshipLabel>DRDW Bdg LI Data loads</relationshipLabel>
        <relationshipName>DRDW_Bdg_LI_Data_loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DRDW_Capability__c</fullName>
        <label>DRDW Capability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRDW_Cost_Center__c</fullName>
        <label>DRDW Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Credit__c</fullName>
        <label>Debit/Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outsourced_Activity__c</fullName>
        <label>Outsourced Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Description__c</fullName>
        <label>PO Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Name__c</fullName>
        <label>PO Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Row__c</fullName>
        <label>Posting Row</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Idea__c</fullName>
        <label>Project/Idea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>DRDW_Budget_Master__c</referenceTo>
        <relationshipLabel>DRDW Bdg LI Data loads</relationshipLabel>
        <relationshipName>DRDW_Bdg_LI_Data_loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAPIDPO__c</fullName>
        <formula>SAPID__c + Posting_Row__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAPIDPO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPID__c</fullName>
        <label>SAPID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_And_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save And Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scientist_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scientist/Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Bdg_LI_Data_loads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US__c</fullName>
        <label>US$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAmount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAmount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCostCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCostCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPoDesc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPoDesc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPosting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPosting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVendor</label>
        <type>Checkbox</type>
    </fields>
    <label>DRDW Bdg LI Data load</label>
    <nameField>
        <displayFormat>BLID-{0000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Bdg LI Data loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>